// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component 1`] = `
.c0 {
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid #999;
  background: white;
  color: black;
  cursor: pointer;
  outline: 0;
}

.c0[disabled] {
  background: lightgrey;
  border-color: #999;
  color: #999;
}

.c0:active {
  background: #eee;
}

.c0 + button {
  margin-left: 15px;
}

<button
  className="c0"
/>
`;

exports[`Primary Button Component 1`] = `
.c0 {
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid #999;
  background: white;
  color: black;
  cursor: pointer;
  outline: 0;
  background: green;
  color: white;
  border-color: transparent;
  border-bottom-color: darkgreen;
}

.c0[disabled] {
  background: lightgrey;
  border-color: #999;
  color: #999;
}

.c0:active {
  background: #eee;
}

.c0 + button {
  margin-left: 15px;
}

.c0:active {
  background: darkgreen;
}

<button
  className="c0"
/>
`;
